<resources>
    <string name="app_name">SMIBS-AR</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="actionAbout">О библиотеке</string>
    <string name="actionHow">Как пользоваться</string>
    <string name="actionGames">Наши игры</string>
    <string name="actionMain">Главная</string>
    <string name="actionAR">Дополненная реальность</string>
    <string name="actionAboutApp">О приложении</string>
    <string name="itemMenuMainTitle">Меню на главной</string>
    <string name="logoMainTitle">Виртуальная библиотека</string>
    <string name="itemMenuMainTitle_1">Дополненная реальность</string>
    <string name="itemMenuMainTitle_2">Наши игры</string>
    <string name="itemMenuMainTitle_3">О библиотеке</string>
    <string name="itemMenuMainTitle_4">Как пользоваться</string>
    <string name="itemMenuMainTitle_5">О приложении</string>
    <string name="itemMenuMainTitle_6">Заказ книг</string>
    <string name="titleAR">Дополненная реальность</string>
    <string name="textAR">Должно быть описание</string>
    <string name="davBow">Гигантский арбалет ДаВинчи</string>
    <string name="davBowTitle">Гигантский арбалет</string>
    <string name="davBowText">
        <![CDATA[
        Инженеры всех времен и народов изобретали орудия не только для мирного труда, но и для войны. Создателю оружия требуется не меньше знаний и изобретательского искусства, чем в любых других сферах деятельности.<br><br>Леонардо да Винчи решил усовершенствовать обычный арбалет.<br><br>«Я спрашиваю: если самострел гонит стрелу на 400 локтей, то самострел такой же формы, имеющий силу и размеры в 4 раза бóльшие, пошлет ли стрелу на расстояние в 4 раза большее?<br><br>Я спрашиваю: если самострел имеет тот же вес, ту же конструкцию и ту же длину, но другую толщину, то какое действие в смысле дальности полета он окажет на ту же стрелу?<br><br>И если самострел гонит стрелу в 2 унции на 400 локтей, то на сколько локтей он прогонит стрелу в 4 унции?»*<br><br><small>*Источник: «Леонардо да Винчи. Избранные естественнонаучные произведения» [текст] / ред., пер. статья и комментарии В.П. Зубова.&nbsp;– Москва : Издательство Академии наук СССР, 1955.&nbsp;– 1029 с.</small><br><br><b>С помощью дополненной реальности</b> вы можете увидеть поистине гигантское оружие для стрельбы. Рядом с таким оружием человек выглядит лилипутом.
        ]]></string>
    <string name="davWingTitle">Крылья</string>
    <string name="davWingText">
        <![CDATA[
        Искусственный полет был задачей, постоянно занимавшей воображение Леонардо: он работал над ее разрешением около двадцати пяти лет. К несчастью для Леонардо, секрет движущей силы навсегда остался скрыт для него, поэтому его кропотливые усилия по имитации полета птиц ни к чему не привели.<br><br><small>Источник: Роберт Уоддэйс «Мир Леонардо. 1452–1519» / пер. с англ. М.Карасевой. – М.: ТЕРРА, 1997. – 192 с.: ил. – (Библиотека искусства). С книгой можно ознакомиться в Центральной городской библиотеке имени Н.К. Крупской.</small>
        ]]></string>
    <string name="davGearwheelTitle">Машина\nс возвратно-\nпоступательным\nдвижением</string>
    <string name="davGearwheelText">
        <![CDATA[
        На одной из страниц рукописи «Атлантического кодекса», датируемой 1478&nbsp;- 1480 гг., изображены два рисунка лебедки, преобразующей переменное движение в непрерывное для поднятия груза. Слева она представлена в собранном виде, ее механизмы соединены в одно целое. Справа  Леонардо да Винчи рисует те же самые механизмы отдельно друг от друга, демонстрируя связь между ними. Вал и деталь колеса повернуты и увеличены в размере; исчерпывающий, но минимальный по объему текст объясняет, как соединять между собой различные элементы машины, представленные в разобранном виде. Визуальный язык делает излишними длинные пояснения.<br><br>Машина с возвратно-поступательным движением являлась предметом исследования Леонардо да Винчи. Он хотел найти способ преобразования возвратно-поступательного движения в непрерывное прямолинейное движение.<br><br><small>Источник: «Машины Леонардо да Винчи: тайны и изобретения в рукописях ученого» [текст] / под ред. Д. Лауренса, М. Таддея, Э. Дзанона : пер. с итал.&nbsp;– М.: Издательство «Ниола-Пресс», 2007,&nbsp;- 240 с.: ил</small><br><br><b>С помощью дополненной реальности</b> вы можете посмотреть, как могло бы выглядеть это изобретение, созданное по чертежам Леонардо да Винчи.
        ]]></string>
    <string name="davMobileTitle">Одометр</string>
    <string name="davMobileText">
        <![CDATA[
        Одометр или измеритель пути – это устройство для точного подсчета расстояния. Существует несколько разных типов таких измерителей. В проекте Леонардо (1503&nbsp;г.) этот прибор становится похожим на повозку. Землемер должен был катить ее с целью измерения расстояний непосредственно на местности.<br><br>Колесо, поставленное вертикально, предназначалось для передачи движения колес на различные механизмы повозки.<br><br>Внутри центрального колеса находились отверстия, которые заполнялись метками: камушками или деревянными шариками. Когда колесо совершало полный оборот, камушек через единственное нижнее отверстие падал в контейнер, расположенный ниже. По окончании работы оставалось только пересчитать камушки в нижнем ящике и таким образом определить длину пройденного пути.<br><br><small>Источник: Машины Леонардо да Винчи: тайны и изобретения в рукописях ученого / под. ред. Д.Лауренцы, М.Таддея, ЭюДзанона: пер. с итал.&nbsp;— М.: ИЗдательство «Ниола-Пресс», 2007.&nbsp;— 240 с.: ил</small><br><br><b>С помощью дополненной реальности</b> вы можете посмотреть, как выглядит изобретение, созданное по чертежам Леонардо да Винчи.
        ]]></string>
    <string name="davExcavatorTitle">Экскаватор</string>
    <string name="davExcavatorText">
        <![CDATA[
        Леонардо да Винчи спроектировал эту машину (1503&nbsp;- 1504 гг.) для ускорения землеройных работ при строительстве каналов.<br><br>Благодаря оригинальной рельсовой системе  она может передвигаться и следовать за продвигающимся фронтом работ.<br><br>Речь идет о кране огромных размеров с двумя стрелами, приводимом в движение единой веревкой и двигающемся аналогично лифту.<br><br><small>Источник: Машины Леонардо да Винчи: тайны и изобретения в рукописях ученого / под. ред. Д.Лауренцы, М.Таддея, ЭюДзанона: пер. с итал.&nbsp;— М.: ИЗдательство «Ниола-Пресс», 2007.&nbsp;— 240 с.: ил.</small><br><br><b>С помощью дополненной реальности</b> вы можете посмотреть, как выглядит экскаватор, созданный по чертежам Леонардо да Винчи.
        ]]></string>
    <string name="davParashuteTitle">Парашют</string>
    <string name="davParashuteText">
        <![CDATA[
        Леонардо да Винчи спроектировал парашют:<br><br>«Если у человека есть шатер из прокрахмаленного полотна, шириною в 12 локтей и вышиною в 12, он сможет бросаться с любой большой высоты без опасности для себя»*<br><br>Речь шла о льняном полотнище, натянутом на деревянный каркас в форме пирамиды. Его высота соответствовала человеческому росту, сторона основания превышала семь метров. Огромная конструкция. И работающая. Протестирована в 2000 году Андрианом Николасом.<br><br><b>С помощью дополненной реальности</b> вы можете посмотреть, как выглядит парашют, созданный по наброску Леонардо да Винчи.<br><br><small>Источник: Константино д’Орацио «Таинственный Леонардо»&nbsp;– Москва : Эксмо, 2019.<br><br>*Цитата из книги «Леонардо да Винчи. Избранные произведения» : в 2т. / пер. А.А. Губера, В.П. Зубова, В.К. Шилейко, А.М. Эфроса; под ред. А.К.Дживелегова, А.М.Эфроса&nbsp;– М.: Изд-во Студии Артемия Лебедева; 2010. Т.1&nbsp;– 444 с., ил.<br><br>С книгами можно ознакомиться в Центральной городской библиотеке имени Н.К. Крупской.</small>
        ]]></string>
    <string name="davClockTitle">Часовые механизмы</string>
    <string name="titleHow">Использование\nприложения</string>
    <string name="textHow">
        <![CDATA[
        <b>Дополненная реальность</b><br>
        1. Нажмите кнопку «Сканировать QR код»;<br><br>
        2. Наведите сканер на изображение QR кода – загрузится автоматически следующий экран;<br><br>
        3. Наведите камеру устройства на горизонтальную поверхность, лучше однородного цвета, и поводите устройством вправо-влево до появления разметки дополненной реальности;<br><br>
        4. Наведите камеру устройства на сетку примерно в 1.5м от вашего местоположения и кликните пальцем по экрану для размещения объекта;<br><br>
        5. Если по каким-либо причинам устройство потеряло привязку к поверхности и модель пропала, просто поводите устройством из стороны в сторону для обнаружения поверхности и модель снова появится на экране.<br><br>
        <b>Наши игры</b><br>
        Каждую игру можно скачать и установить на устройство, просто нажав на банер и перейдя по ссылке на наш сайт, где на странице игры находится кнопка скачивания файла.
        ]]></string>
    <string name="logoAboutDescription">СМИБС логотип</string>
    <string name="titleAbout">Виртуальная библиотека\nЦГБ им. Н.К. Крупской</string>
    <string name="textAbout">Центральная городская библиотека им. Н.К. Крупской одна из старейших библиотек Самары, которая входит в сеть Самарской муниципальной информационно-библиотечной системы и осуществляет методическое кураторство 35 филиалов библиотечной системы города.\n\nВ 2020 году Центральная городская библиотека им. Н.К. Крупской стала победителем Национального проекта «Культура» и приобрела статус модельной.\n\nБиблиотека сегодня – это арт-пространство, площадка для творчества, место встречи людей и идей, удобное, узнаваемое, вместе с тем современное.\n\nКонцепция пространства библиотеки: «классика плюс современность».\n\nКлючевой образ, который позволяет воплотить в жизнь идею «Классика плюс», отражен в интерьере – образ крыльев, метафоры полета как образа будущего, образа воплощенной мечты, стремления преодолеть поставленные человеку пределы. Эта метафора выражена в специфических акцентах интерьера: геометрические формы, светильники, сконструированные как летательные аппараты Леонардо да Винчи. Такое пластическое решение не только напоминает о безграничных возможностях человеческого разума и фантазии и поиске утопического идеала, важного для ренессансной эпохи, но и является своеобразной «цитатой» рубежа прошедших веков – а биография Надежды Крупской принадлежит этому контексту: «авиационные» метафоры, мотивы воздухоплавания, образы авиаторов были весьма популярны в искусстве и литературе начала ХХ столетия.\n\nВ пространстве библиотеки располагаются арт-объекты, созданные по чертежам Леонардо да Винчи: велосипед, вертолёт («воздушный винт»), парашют, дельтаплан.\n\nВ виртуальной библиотеке ЦГБ им. Н.К. Крупской вам предоставляется возможность увидеть в дополненной реальности 3D-модели, сконструированные по эскизам Леонардо да Винчи, а также вы можете скачать на компьютер или мобильное устройство с операционной системой Android познавательные литературные игры.\n\nПриятного времяпрепровождения!</string>
    <string name="textAboutAppVersion">Версия 1.1.11 ® СМИБС 2025</string>
    <string name="textAboutAppLink">https://smibs.ru</string>
    <string name="textAboutAppDescription">Приложение создано на основе использования свободно распространяемого программного обеспечения и может устанавливаться на любом поддерживаемом устройстве под управлением системы андроид.\n\nАвторские права принадлежат Муниципальному бюджетному учреждению культуры городского округа Самара «Самарская муниципальная информационно-библиотечная система».\n\nАвторы:\nАлександр Суворов\nЛюбовь Оберт\nНина Россиева\nАнастасия Полякова\nЕлена Расторгуева</string>
</resources>