<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/project_image"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:contentDescription="@string/davBow"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/project_title"
            style="@style/stylesTitle"
            android:layout_gravity="center_horizontal"
            android:text="@string/titleAR" />

        <TextView
            android:id="@+id/project_text"
            style="@style/stylesText"
            android:layout_gravity="fill_horizontal"
            android:text="@string/textAR"
            android:textAlignment="gravity" />

    </LinearLayout>

</androidx.cardview.widget.CardView>