<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AboutAppActivity"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:context=".presentation.AboutAppActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/stylesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/logo_about_app"
                style="@style/stylesLogoTop"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logoAboutDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/smibsicon" />

            <TextView
                android:id="@+id/text_about_version"
                style="@style/stylesText"
                android:layout_below="@id/logo_about_app"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/textAboutAppVersion"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_about_app" />

            <TextView
                android:id="@+id/text_about_description"
                style="@style/stylesText"
                android:layout_below="@id/text_about_version"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/line_bottom"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/textAboutAppDescription"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_about_version" />

            <TextView
                android:id="@+id/text_about_link"
                style="@style/stylesText"
                android:layout_below="@id/text_about_description"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/textAboutAppLink"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_about_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            style="@style/stylesToolbar" />
    </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nv"
            style="@style/navigationMenuStyle"
            app:headerLayout="@layout/menu_header"
            app:itemIconTint="@color/accentColor"
            app:menu="@menu/menu_main" />

</androidx.drawerlayout.widget.DrawerLayout>