<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HowActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/stylesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_about"
            style="@style/stylesLogoTop"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/logoAboutDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/smibs_logo" />

        <TextView
            android:id="@+id/title_how"
            style="@style/stylesTitle"
            android:layout_below="@id/logo_about"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/titleHow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_about" />

        <TextView
            android:id="@+id/text_about"
            style="@style/stylesText"
            android:layout_below="@id/title_how"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textHow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_how" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            style="@style/stylesToolbar" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/primaryColor"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:itemIconTint="@color/accentColor"
        app:itemTextColor="@color/accentColor"
        app:menu="@menu/menu_main" />

</androidx.drawerlayout.widget.DrawerLayout>

